--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
 	"name": "fcc-learn-npm-package-json",
-	"author": "George Michael",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
@@ -11,6 +10,7 @@
 	"repository": {
 		"type": "git",
 		"url": "https://idontknow/todo.git"
-	}
+	},
+	"author": "George Michael"
 	
 }
